# solana-program-simulator

./: Cargo.toml  README.md
src/: lib.rs  program_simulator.rs
tests/: test_airdrop.rs
