[package]
name = "solana-program-simulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]
name = "solana_program_simulator"

[features]
default = []
anchor = ["anchor-lang"]

[dependencies]
anchor-lang = { version = "^0.30.1", optional = true }
solana-program = "^1.18.26"
solana-sdk = "^1.18.26"
solana-program-test = "^1.18.26"
solana-banks-interface = "^1.18.26"
borsh = "0.9.3"

[dev-dependencies]
tokio = "^1"
anyhow = "^1"
