[package]
name = "solana-program-simulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "solana_program_simulator"

[features]
default = []
anchor = ["anchor-lang"]

[dependencies]
anchor-lang = { version = "^0.31.0", optional = true }
solana-program = "^2.1.0"
solana-sdk = "^2.1.0"
solana-program-test = "^2.1.0"
solana-banks-interface = "^2.1.0"
borsh = "^1"

[dev-dependencies]
tokio = "^1"
anyhow = "^1"
